Closed Bug 1896960 Opened 2 months ago Closed 2 months ago

When setting custom color in edit, they disappear after closing pane

Categories

(Core :: Widget: Win32, defect)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
thunderbird_esr115 --- affected
firefox-esr115 --- wontfix
firefox126 --- wontfix
firefox127 --- wontfix
firefox128 --- verified

People

(Reporter: dskirk, Assigned: evilpie)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

edit HTML message
highlight text
click color button on HTML compose menu bar
Select a color and tweak it and click 'add to custom colors'
Click OK and return to edit mode

Actual results:

click the color button again in compose window and the custom colors that were added no longer appear. Once a custom color is added, it should remain.

Expected results:

when clicking the color button again, the custom colors should still be on the color pane for further use. This feature worked in 102 and in 91, but does not work in 115.

Seems to work for me.

Component: Untriaged → Message Compose Window

Please recheck. I have used Thunderbird (and even Betterbird), plus beta and daily, with and without troubleshoot mode, on two PCs, and the results have been the same: I can create custom color, but on clicking the feature a second time, the custom colors are not there. Using Windows 11, 64-bit. This has also been reported on SUMO by users.

Can reproduce in TB 115.

Following the steps above, the customized color is only available as "last picked color", but not in choose a color > custom colors.

Status: UNCONFIRMED → NEW
Ever confirmed: true

Alice, can you find the regression?

Flags: needinfo?(alice0775)

I can reproduce the color picker bug on Firefox126.0 Windows11, but not on Ubuntu22.04.
Str:

  1. Open https://developer.mozilla.org/ja/docs/Web/HTML/Element/input/color
  2. Click on a color box of HEAD and create and add custom color, close the picker
  3. Click on a color box of BODY

AR:
The colors created are not listed.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=2530f7588e103e1d608e8100f5a97d1b8ff4f060&tochange=9e1bb956dc0d7d1c50a3d99201ec7fce1f10728c

Suspect: Bug 960984 - Implement the list attribute for <input type=color>.

Component: Message Compose Window → Layout: Form Controls
Flags: needinfo?(alice0775)
Keywords: regression
Product: Thunderbird → Core
Regressed by: 960984
Version: Thunderbird 115 → unspecified

:evilpie, since you are the author of the regressor, bug 960984, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(evilpies)

Thank you, Alice, great idea to reproduce the regression in Firefox!

Duplicate of this bug: 1865504
Component: Layout: Form Controls → Widget: Win32
Flags: needinfo?(evilpies)

I think there is no good way of combining support for datalists and
whatever the user picked. So I just treat the datalist colors as an
overwrite.

Assignee: nobody → evilpies
Status: NEW → ASSIGNED

Sorry -- but I have no idea what you mean by datalist colours or overwrite

Flags: needinfo?(evilpies)
Flags: needinfo?(evilpies)

Datalist colors are described here on MDN. Probably doesn't apply to Thunderbird and everything should work as before.

Pushed by evilpies@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/def90fc8f64b
Preserve the user's custom colors between multiple color pickers. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch

The patch landed in nightly and beta is affected.
:evilpie, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox127 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(evilpies)
Flags: needinfo?(evilpies)
Flags: qe-verify+

I was able to reproduce the issue on Win11 using FF build 126.0 and steps from comment#7.
Verified as fixed on Win11/Mac12.6 using FF builds 128.0b8 and 129.0a1.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: