Bug 1896960 - Preserve the user's custom colors between multiple color pickers. r=emilio

I think there is no good way of combining support for datalists and
whatever the user picked. So I just treat the datalist colors as an
overwrite.

Differential Revision: https://phabricator.services.mozilla.com/D210891